--- a/InfoTecFrontEnd/src/app/pages/user-panel/user-panel.component.html
+++ b/InfoTecFrontEnd/src/app/pages/user-panel/user-panel.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
     <div class="row justify-content-center align-items-center">
         <div class="col-sm-12">
-            <div *ngIf="config.user === 'Alumno'" class="card " style="background: #FAF6F6;">
-                <div class="card-header" style="background: white;">
+            <div *ngIf="config.user === 'Alumno'" class="card shadow " style="background: #FAF6F6; border-color: transparent;">
+                <div class="card-header" style="background: white;border-color: transparent;">
                     <div class="row">
                         <div class="col-sm">
                             <h4>
