--- a/InfoTecFrontEnd/src/app/pages/pages.component.html
+++ b/InfoTecFrontEnd/src/app/pages/pages.component.html
@@ -1,5 +1,6 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark static-top ">
+<nav class="navbar navbar-expand navbar-dark static-top " style="background: #06326B;">
     <!-- <app-navbar></app-navbar> -->
+
     <a class="navbar-brand mr-1" href="index.html">InfoTec</a>
 
     <button class="btn btn-link btn-sm text-white order-1 order-sm-0" data-toggle="collapse" id="sidebarToggle" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -60,25 +61,28 @@
 
 
 </nav>
-<div id="wrapper">
-    <ul class="sidebar  position-static navbar-nav collapse" id="collapseExample">
-        <li class="nav-item active ">
-            <app-sidebar></app-sidebar>
+<div style="background: white;">
+    <div id="wrapper">
+        <ul class="sidebar  position-static navbar-nav" style="background: #0D468B;" id="collapseExample">
+            <li class="nav-item active ">
+                <app-sidebar></app-sidebar>
 
-            <!--  <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-                        <h6 class="dropdown-item" [routerLink]="['/user']">Panel</h6>
-                        <h6 class="dropdown-item" *ngIf="user === 'alumno' || user === 'encargado'" [routerLink]="['/bank']">Banco de proyectos</h6>
-                        <h6 class="dropdown-item" *ngIf="user === 'alumno'" [routerLink]="['/seguimiento']">Seguimiento</h6>
-                        <h6 class="dropdown-item" *ngIf="user === 'asesor'" [routerLink]="['/file']">Panel de Archivos</h6>
-                         <a class="dropdown-item" [routerLink]="['/user']">Panel</a>
-                        <a *ngIf="user === 'alumno' || user === 'encargado'" class="dropdown-item" [routerLink]="['/bank']">Banco de proyectos</a>
-                        <h6 class="dropdown-header">Paginas:</h6>
-                        <a *ngIf="user === 'alumno'" class="dropdown-item" [routerLink]="['/seguimiento']">Seguimiento</a>
-                        <a *ngIf="user === 'asesor'" class="dropdown-item" [routerLink]="['/file']">Panel de Archivos</a>
-                    </div> -->
-        </li>
-    </ul>
-    <div id="content-wrapper">
-        <router-outlet></router-outlet>
+                <!--  <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                            <h6 class="dropdown-item" [routerLink]="['/user']">Panel</h6>
+                            <h6 class="dropdown-item" *ngIf="user === 'alumno' || user === 'encargado'" [routerLink]="['/bank']">Banco de proyectos</h6>
+                            <h6 class="dropdown-item" *ngIf="user === 'alumno'" [routerLink]="['/seguimiento']">Seguimiento</h6>
+                            <h6 class="dropdown-item" *ngIf="user === 'asesor'" [routerLink]="['/file']">Panel de Archivos</h6>
+                             <a class="dropdown-item" [routerLink]="['/user']">Panel</a>
+                            <a *ngIf="user === 'alumno' || user === 'encargado'" class="dropdown-item" [routerLink]="['/bank']">Banco de proyectos</a>
+                            <h6 class="dropdown-header">Paginas:</h6>
+                            <a *ngIf="user === 'alumno'" class="dropdown-item" [routerLink]="['/seguimiento']">Seguimiento</a>
+                            <a *ngIf="user === 'asesor'" class="dropdown-item" [routerLink]="['/file']">Panel de Archivos</a>
+                        </div> -->
+            </li>
+        </ul>
+        <div id="content-wrapper">
+            <router-outlet></router-outlet>
+        </div>
     </div>
+
 </div>
