User login validation

--- a/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
+++ b/InfoTecFrontEnd/src/app/shared/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
         <i class="fas fa-fw fa-file"></i>
         <span>Panel de Archivos</span>
     </a>
-    <a *ngIf="user === 'encargado'" [routerLink]="['/fileencargado']" class="nav-link" href="#" id="pages4Dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a *ngIf="user === 'Encargado de residencias'" [routerLink]="['/fileencargado']" class="nav-link" href="#" id="pages4Dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fas fa-fw fa-file"></i>
         <span>Panel de Archivos</span>
     </a>
