--- a/InfoTecFrontEnd/src/app/pages/user-login/user-login.component.html
+++ b/InfoTecFrontEnd/src/app/pages/user-login/user-login.component.html
@@ -5,20 +5,18 @@
                 <img class="card-img-top mx-auto " style="width: 200px; height: 200px;" src="../../../assets/images/imageLogin.png" alt="Card image cap">
                 <div class="card-body">
 
-                    <div *ngIf="isUnauthorized" class="alert alert-warning alert-dismissible fade show" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                      <span aria-hidden="true">&times;</span>
-                                    </button> Usuario o contraseña incorrecta
+                    <div *ngIf="isUnauthorized" class="alert alert-danger" role="alert">
+                        Usuario o contraseña incorrecta
                     </div>
                     <form id="form1" name="form1" #form="ngForm">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Usuario</label>
-                            <input type="text" [(ngModel)]="user.userName" placeholder="Introduce número de control" name="userName" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <input type="text" [(ngModel)]="user.userName" (keyup)="validated(false)" placeholder="Introduce número de control" name="userName" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                             <!--  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Contraseña</label>
-                            <input type="password" [(ngModel)]="user.password" placeholder="Introduce tu contraseña" name="password" class="form-control" id="exampleInputPassword1">
+                            <input type="password" (keyup)="validated(false)" [(ngModel)]="user.password" placeholder="Introduce tu contraseña" name="password" class="form-control" id="exampleInputPassword1">
                         </div>
                         <div class="form-group">
                             <label for="inputState">Tipo usuario</label>
@@ -29,11 +27,13 @@
                                 <option >Encargado de residencias</option>
                             </select>
                         </div>
+                        <div class="form-group">
+                            <input type="submit" class="btn btn-primary text-center" value="Acceder" (click)="Login()">
+                        </div>
                         <!-- <div class="form-group form-check">
                                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                         <label class="form-check-label" for="exampleCheck1">Check me out</label>
                                     </div> -->
-                        <button type="submit" class="btn btn-primary text-right" (click)="Login()">Acceder</button>
                     </form>
                 </div>
             </div>
