--- a/InfoTecFrontEnd/src/app/pages/user-panel/user-panel.component.html
+++ b/InfoTecFrontEnd/src/app/pages/user-panel/user-panel.component.html
@@ -405,31 +405,19 @@
                                                         </div>
                                                         <div class="col-auto">
                                                             <div class="text-left">
-                                                                {{asesor.idAsesor}}
+                                                                {{encargado.idadmin}}
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-sm-auto">
                                                             <div class="text-left">
-                                                                <div class="font-weight-bold">Correo: </div>
+                                                                <div class="font-weight-bold">Nombre: </div>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-auto">
                                                             <div class="text-left">
-                                                                {{asesor.correo_electronico}}
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="row">
-                                                        <div class="col-sm-auto">
-                                                            <div class="text-left">
-                                                                <div class="font-weight-bold">Telefono: </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-sm-auto">
-                                                            <div class="text-left">
-                                                                {{asesor.telefono}}
+                                                                {{encargado.nombre}} {{encargado.apellido}}
                                                             </div>
                                                         </div>
                                                     </div>
